# Rusty_Playground

./: .gitignore  README.md
from_tutorial/cons/src/: main.rs
from_tutorial/deref_coercion/src/: main.rs
from_tutorial/minigrep/src/: lib.rs  main.rs
from_tutorial/mpsc/src/: main.rs
from_tutorial/node/src/: main.rs
from_tutorial/ref_and_smart_pointer/: Cargo.toml
from_tutorial/ref_and_smart_pointer/src/: main.rs
from_tutorial/state/src/: main.rs
from_tutorial/web_server/src/: lib.rs  main.rs
pyo3_dataframe/: .gitignore  Cargo copy.toml  Cargo.toml  README.md
pyo3_dataframe/python/: main.ipynb
pyo3_dataframe/python/pyo3_dataframe/: main.ipynb  requirements.txt
pyo3_dataframe/src/: lib.rs
pyo3_dataframe/src/query_handler/: core.rs  utils.rs
simple_chip8/: Cargo.toml
simple_chip8/src/: lib.rs
simple_operator_precedence_parser/: Cargo.toml  README.md
simple_operator_precedence_parser/examples/: README.md  basic-calculator-123-streamlined.rs  basic-calculator-123.rs  binary-expression-tree-for-infix.rs  num-of-atoms.rs  pratt-basic-calculator-123.rs  pratt-streamlined-basic-calculator-123.rs  shunt-basic-calculator-23.rs
simple_operator_precedence_parser/src/: lib.rs  pratt.rs  pratt_streamlined.rs  shunting_yard.rs  shunting_yard_bp.rs
too_many_linked_lists/src/: lib.rs  ok_stack.rs  persistent_list.rs
zero2prod/: Cargo.toml
zero2prod/migrations/: 20230727062213_create_subscriptions_table.sql
zero2prod/scripts/: start_db.sh
zero2prod/src/: configurations.rs  lib.rs  main.rs  startup.rs
zero2prod/tests/: health_check.rs
(+2 files in other folders)
